--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
 body{
-    
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: rgb(9, 44, 9);
 }
