--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 body{
-   
+    width:100%;
+    height:100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     color: rgb(9, 44, 9);
+    overflow: hidden;
+    font-family: sans-serif;
+}
+h1{
+    margin:0;
 }
